refactor: make dpt core compatible with Android
- replace java.nio usage with File/FileOutputStream APIs (minSdk 21)
- add DptBuildKey, decouple FileUtils/AndroidPackage from Dpt class
- add injectable outDir, keystore type and debug keystore path
- sign via ApkSigner API instead of ApkSignerTool (avoids System.exit)
- add LogUtils log listener callback
- ShellConfig/DexUtils: handle org.json JSONException and Buffer API diffs
- declare kotlin android + compose plugins
Co-authored-by: monkeycode-ai <monkeycode-ai@chaitin.com>